<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">U-Report</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="remember_me_option">Remember me</string>
    <string name="email">Email</string>
    <string name="error_required_field">Required field</string>
    <string name="login">Login</string>
    <string name="login_facebook">Sign up with Facebook</string>
    <string name="login_google">Google+</string>
    <string name="login_twitter">Twitter</string>
    <string name="login_skip">Skip Login</string>
    <string name="login_or">Or</string>
    <string name="login_sign_up">Click here to sign up with email!</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_nickname">Nickname</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_birthday">Birthday</string>
    <string name="sign_up_confirm">Confirm</string>
    <string name="user_gender_male">Male</string>
    <string name="user_gender_female">Female</string>
    <string name="error_minimum_size">Set a value higher than %1$s characters</string>
    <string name="error_valid_email">Set a valid e-mail</string>
    <string name="label_home">Main</string>
    <string name="load_message_wait">Wait...</string>
    <string name="main_stories">Stories</string>
    <string name="main_polls">Polls</string>
    <string name="main_news_feed">Program News</string>
    <string name="main_menu_home">Main</string>
    <string name="main_menu_chat">Chat</string>
    <string name="main_menu_group_unicef">Unicef</string>
    <string name="main_menu_subitem_buy_goods">Buy goods</string>
    <string name="main_menu_subitem_embassadors">Ambassadors</string>
    <string name="base_menu_open_drawer">Open Menu</string>
    <string name="base_menu_close_drawer">Close Menu</string>
    <string name="stories_list_item_author">by %1$s</string>
    <string name="stories_list_item_contributions">%1$d contributions</string>
    <string name="title_story">Story</string>
    <string name="story_item_read_full_story">See full story</string>
    <string name="label_new_story">New story</string>
    <string name="create_story_insert_cover">Insert a cover picture</string>
    <string name="create_story_insert_title">Insert a title</string>
    <string name="create_story_insert_story_content">Tell us what\'s going on</string>
    <string name="create_story_title_media">Insert Media</string>
    <string name="create_story_add_markers">Add markers</string>
    <string name="media_remove">Remove</string>
    <string name="title_media_source">Choose a media source:</string>
    <string name="create_story_insert_cover_title">Insert a cover picture</string>
    <string name="create_story_title_cover_image">Choose the cover picture source:</string>
    <string name="action_title_publish">Publish</string>
    <string name="action_label_search">Search</string>
    <string name="create_story_add_marker_title">New marker</string>
    <string name="label_story_view">Story View</string>
    <string name="story_view_contribute">Contribute to this story</string>
    <string name="story_contribution_add">Add a contribution</string>
    <string name="label_official">Official</string>
    <string name="title_news">News</string>
    <string name="label_see_full_news">See full news</string>
    <string name="polls_participate">Answer</string>
    <string name="polls_current">Current poll</string>
    <string name="polls_responded_info">%1$s responded out of %2$s polled</string>
    <string name="polls_response_rate">%1$s%% response rate</string>
    <string name="polls_see_results">See results</string>
    <string name="news_more_statistics">More statistics</string>
    <string name="news_ureporters">U-Reporters</string>
    <string name="news_statistics_global_ureporters">Global U-reporters</string>
    <string name="news_statistics_gender_rate">Rate by Gender</string>
    <string name="news_statistics_most_active">4 most active regions</string>
    <string name="news_statistics_age_rate">Rate by Age</string>
    <string name="answer_polls_respond">Send</string>
    <string name="answer_poll_choose_error">You need to choose an answer!</string>
    <string name="confirm_neutral_dialog_button">Ok</string>
    <string name="answer_poll_greetings_title">Congratulations!</string>
    <string name="answer_poll_greeting_message">Thank you for participating in this poll, the outcomes will be available soon.</string>
    <string name="label_poll_results">All results</string>
    <string name="label_poll_region_results">Result by Region</string>
    <string name="poll_results_by_region">See results by region</string>
    <string name="menu_notifications_title">Notifications</string>
    <string name="label_profile">Profile</string>
    <string name="label_my_profile">My profile</string>
    <string name="label_edit">Edit</string>
    <string name="label_change_photo">Change photo</string>
    <string name="label_private_information">Private information</string>
    <string name="label_logout">Logout</string>
    <string name="question_logout">Do you want really logout from U-report?</string>
    <string name="profile_my_stories">My stories</string>
    <string name="profile_answered_polls">Answered Polls</string>
    <string name="profile_ranking">Ranking</string>
    <string name="list_stories_error">You did not publish any story so far.</string>
    <string name="profile_polls">Polls: %1$s</string>
    <string name="profile_stories">Stories: %1$s</string>
    <string name="menu_points">Points: %1$s</string>
    <string name="label_chat_groups">Open Groups</string>
    <string name="chat_groups_join">Join</string>
    <string name="chat_rooms">My chats</string>
    <string name="chat_invite_contacts_title">Send a SMS to invite your friends</string>
    <string name="chat_contact_invite_button">Invite</string>
    <string name="chat_invite">Invite</string>
    <string name="label_new_chat">New chat</string>
    <string name="chat_create_group_title">Create a Group</string>
    <string name="chat_ureporters">U-Reporters</string>
    <string name="chat_group_title_hint">Group title</string>
    <string name="chat_private_group_title">Private group</string>
    <string name="chat_new_invite_ureporters">Search U-Reporters</string>
    <string name="chat_new_invite_ureporters_count">%1$s u-reporters</string>
    <string name="label_save">Save</string>
    <string name="chat_create_result_title">Success!</string>
    <string name="chat_create_group_result_message">The group was created with success!</string>
    <string name="chat_group_description_hint">Description</string>
    <string name="label_create_group">Create group</string>
    <string name="chat_create_individual_message">Do you want to create a new chat room with this u-reporter?</string>
    <string name="error_chat_create_individual">You already have a chat room with this user. It\'s not possible to duplicate.</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="label_action_notifications">Notifications</string>
    <string name="about_content">
        U-Report is a free tool for community participation, designed to address issues that the people care about. Once you have signed up you become a U-Reporter and can Chat with other U-Reporters, submit stories and answer the weekly polls. Results and ideas are shared back with the community. Issues polled include health, education, water, sanitation and hygiene, youth unemployment, HIV/AIDS, disease outbreaks and anything else people want to discuss.
        \n\nInformation is used to connect young people with their representatives, improve UNICEF programmes and draw attention to urgent issues with national governments and the UN. NGOs, civil society and country leaders can see the information on the site to understand what the people want or need.
        \n\nRegistration is voluntary and U-Reporters incur no costs.
        \n\nTogether U-Reporters create positive change in the community, the nation and internationally.
    </string>
    <string name="label_about_ureport">About U-Report</string>
    <string name="about_subtitle">Voice\nMatters</string>
    <string name="donation_subtitle">When you make \na donation...</string>
    <string name="label_make_donation_subtitle">Make\nDonation</string>
    <string name="make_donations_content">You help UNICEF save children and transform lives by working for a more just and secure world for young people.  You can make a difference now!</string>
    <string name="label_donation">Donate Now</string>
    <string name="chat_room_message_hint">Write a message</string>
    <string name="label_action_search">Search</string>
    <string name="label_leave_group">Leave Group</string>
    <string name="chat_group_info_created_date">Created by %1$s, %2$S</string>
    <string name="label_group_info">Group info</string>
    <string name="chat_group_leave">Do you really want to leave this group?</string>
    <string name="login_validation_error_message">You need to login before making this action!\nDo you want to login now ?</string>
    <string name="label_chat">Chat</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="story_item_contribute_to_story">Contribute to this story</string>
    <string name="list_stories_header_title">Hi %1$s, tell us what\'s going on</string>
    <string name="main_menu_group_institutional">Institutional</string>
    <string name="label_settings">Settings</string>
    <string name="label_terms_of_use">Terms of use</string>
    <string name="group_info_add_ureporter">Add U-Reporter</string>
    <string name="label_group_information">Information</string>
    <string name="country_program_validation_error">You can\'t do this action for this country program!</string>
    <string name="label_group_edit">Edit group</string>
    <string name="label_answer_poll">Answer Poll</string>
    <string name="points_earning_title">Thanks for collaborate!</string>
    <string name="points_earning_subtitle">You went up in the ranking</string>
    <string name="points_earning_count_title">Points:</string>
    <string name="points_earning_ranking">Go to Ranking</string>
    <string name="points_earning_close">Close</string>
    <string name="polls_previous_title">Previous polls</string>
    <string name="switch_country_program">Switch Country Program</string>
    <string name="label_select_country">Select country</string>
    <string name="about_title">About U-Report</string>
    <string name="label_privacy_policy">Privacy policy</string>
    <string name="label_unicef_ambassadors">Unicef Ambassadors</string>
    <string name="info_forgot_password">We will send a new password through email.</string>
    <string name="send">Send</string>
    <string name="search_title">Search</string>
    <string name="old_password_title">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password_title">Below write your current password, and then the new one.</string>
    <string name="title_poll_question_user">Hi %1$s!</string>
    <string name="poll_question_latest_results">Previous poll results</string>
    <string name="view_title">View</string>
    <string name="poll_response_hint">Tap here to answer</string>
    <string name="poll_question_default_message">Wait for the next poll or send a message to U-Report below</string>
    <string name="main_chat">Chat</string>
    <string name="title_open_groups">Follow Groups</string>
    <string name="description_open_groups">See what U-Report communities are talking about</string>
    <string name="title_see">See</string>
    <string name="label_moderation">Moderation</string>
</resources>