<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/mainNavigation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/main_menu_home"/>

        <item
            android:id="@+id/moderation"
            android:title="@string/label_moderation"
            android:visible="false"/>
    </group>

    <group
        android:id="@+id/institutional"
        android:checkableBehavior="none">
        <item
            android:id="@+id/about"
            android:title="@string/label_about_ureport"/>
        <item
            android:id="@+id/makeDonation"
            android:title="@string/label_donation"
            android:visible="false"/>
    </group>

    <group
        android:id="@+id/settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/changeSettings"
            android:title="@string/label_settings"/>

        <item
            android:id="@+id/logout"
            android:title="@string/label_logout"/>
    </group>

</menu>