<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:minWidth="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/points_earning_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/primary_color"
        android:textSize="17sp"
        android:text="@string/points_earning_subtitle"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/ranking_up"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/points_earning_count_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="#add534"
            android:text="+5"/>

    </LinearLayout>

    <Button
        android:id="@+id/ranking"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/shape_default_button"
        android:textColor="@android:color/white"
        android:text="@string/points_earning_ranking"/>

    <Button
        android:id="@+id/confirm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@null"
        android:textColor="@color/primary_color"
        android:text="@string/points_earning_close"/>

</LinearLayout>