<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/change_password_title"/>

    <br.com.ilhasoft.support.widget.CustomTextInputLayout
        android:id="@+id/oldPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_marginTop="20dp"
        style="@style/AppTheme.FormMargin">

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_border_bottom"
            android:inputType="textPassword"
            android:hint="@string/old_password_title"/>

    </br.com.ilhasoft.support.widget.CustomTextInputLayout>

    <br.com.ilhasoft.support.widget.CustomTextInputLayout
        android:id="@+id/newPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPasswordInputLayout"
        style="@style/AppTheme.FormMargin">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_border_bottom"
            android:inputType="textPassword"
            android:hint="@string/new_password"/>

    </br.com.ilhasoft.support.widget.CustomTextInputLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordInputLayout"
        android:layout_margin="20dp"
        android:background="@drawable/shape_gray_round_button"
        android:textColor="@android:color/white"
        android:text="@string/sign_up_confirm"/>

</RelativeLayout>