<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:background="?attr/colorPrimaryDark"
            android:gravity="center"
            tools:layout_marginTop="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ureport"/>

            <TextView
                android:id="@+id/userInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="@string/title_poll_question_user" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="@string/poll1_description"
                android:text="@string/poll_question_default_message" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@android:color/white">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/poll_response_hint"
            android:singleLine="true"
            android:imeOptions="actionSend"
            android:background="@android:color/white"/>

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/poll_question_latest_results"/>

        <Button
            android:id="@+id/viewPreviousPolls"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_default_button"
            android:textColor="@android:color/white"
            android:text="@string/view_title" />

    </RelativeLayout>
</LinearLayout>
