<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_green_highlight"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <TextView
        android:id="@+id/info"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/info_forgot_password"/>

    <br.com.ilhasoft.support.widget.CustomTextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/AppTheme.FormMargin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

    </br.com.ilhasoft.support.widget.CustomTextInputLayout>

    <Button
        android:id="@+id/send"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailInputLayout"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_green_round_button"
        android:textColor="@android:color/white"
        android:text="@string/send"
        style="@style/AppTheme.FormMargin" />

</RelativeLayout>