<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#eaeaea">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/title_open_groups"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/title"
            android:layout_toLeftOf="@+id/seeOpenGroups"
            android:layout_toStartOf="@+id/seeOpenGroups"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/description_open_groups"/>

        <Button
            android:id="@+id/seeOpenGroups"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@android:color/white"
            android:text="@string/title_see"
            android:background="@drawable/shape_default_button"/>

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/chatsList"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
