<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/skipLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/login_skip"
        android:textAllCaps="true"
        android:textColor="@color/gray_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/signUp"
        app:layout_constraintTop_toBottomOf="@+id/skipLogin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/logo_ureport_global"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginWithCredentials"
            style="@style/AppTheme.CustomButton"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/shape_green_round_button"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/loginWithFacebook"
            style="@style/AppTheme.CustomButton"
            android:layout_below="@+id/loginWithCredentials"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/shape_dark_blue_round_button"
            android:text="@string/login_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithCredentials" />

        <View
            android:layout_width="100dp"
            android:layout_height="0.8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="18dp"
            android:layout_marginRight="18dp"
            android:background="#808080"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintStart_toStartOf="@+id/loginWithFacebook"
            app:layout_constraintTop_toTopOf="@+id/or" />

        <View
            android:layout_width="100dp"
            android:layout_height="0.8dp"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#808080"
            app:layout_constraintBottom_toBottomOf="@+id/or"
            app:layout_constraintEnd_toEndOf="@+id/loginWithFacebook"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toTopOf="@+id/or" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/login_or"
            android:textColor="@color/gray_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithFacebook" />

        <Button
            android:id="@+id/loginWithTwitter"
            android:layout_width="120dp"
            android:layout_height="@dimen/login_item_height"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_light_blue_round_button"
            android:text="@string/login_twitter"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/or"
            app:layout_constraintStart_toStartOf="@+id/loginWithFacebook"
            app:layout_constraintTop_toBottomOf="@+id/or" />

        <Button
            android:id="@+id/loginWithGoogle"
            android:layout_width="120dp"
            android:layout_height="@dimen/login_item_height"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/shape_red_round_button"
            android:text="@string/login_google"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/loginWithFacebook"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/or" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#fedb42"
        android:gravity="center"
        android:text="@string/login_sign_up"
        android:textColor="@color/gray_bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
